--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,8 @@
         <jar.plugin.version>2.3.1</jar.plugin.version>
         <war.plugin.version>2.3</war.plugin.version>
         <compiler-plugin-version>2.5.1</compiler-plugin-version>
-        <netbeans.hint.j2eeVersion>1.6</netbeans.hint.j2eeVersion>
-        <netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
+        <netbeans.hint.j2eeVersion>1.7</netbeans.hint.j2eeVersion>
+        <!--<netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>-->
         <netbeans.hint.license>wegas</netbeans.hint.license>
 
         <github.global.server>github</github.global.server>
@@ -144,7 +144,11 @@
                 <version>1.0.9</version>
                 <scope>compile</scope>
             </dependency>
-
+        <dependency>
+           <groupId>javax</groupId>
+           <artifactId>javaee-web-api</artifactId>
+           <version>7.0</version>
+        </dependency>
             <!-- Jersey -->
             <dependency>
                 <groupId>com.sun.jersey</groupId>
@@ -249,8 +253,8 @@
             <!-- Embedded glassfish -->
             <dependency>
                 <groupId>org.glassfish.main.extras</groupId>
-                <artifactId>glassfish-embedded-all</artifactId>
-                <version>3.1.2.2</version>
+                <artifactId>glassfish-embedded-web</artifactId>
+                <version>4.0-b72</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -258,19 +262,19 @@
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>eclipselink</artifactId>
-                <version>2.3.0</version>
+                <version>2.5.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>javax.persistence</artifactId>
-                <version>2.0.3</version>
+                <version>2.1.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.eclipse.persistence</groupId>
                 <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-                <version>2.3.0</version>
+                <version>2.5.0</version>
                 <scope>provided</scope>
             </dependency>
 
