--- a/wegas-app/src/main/webapp/WEB-INF/web.xml
+++ b/wegas-app/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 
     <!-- Apache Shiro Listener -->
     <!-- shiro filter must be declared before any other filter, to ensure
-        security checks. -->
+    security checks. -->
     <listener>
         <listener-class>org.apache.shiro.web.env.EnvironmentLoaderListener</listener-class>
     </listener>
@@ -53,19 +53,19 @@
     <!-- REST Facade -->
     <servlet>
         <servlet-name>Rest Facade</servlet-name>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
-            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-name>org.glassfish.jersey.api.json.POJOMappingFeature</param-name>
             <param-value>true</param-value>
         </init-param>
-        <init-param>
+        <!--<init-param>
             <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
             <param-value>com.wegas.core.rest.util.ManagedModeResponseFilter</param-value>
         </init-param>
         <init-param>
             <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
             <param-value>com.wegas.core.rest.util.ViewRequestFilter</param-value>
-        </init-param>
+        </init-param>-->
         <!--<init-param>
             <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
             <param-value>com.sun.jersey.api.container.filter.LoggingFilter</param-value>
