--- a/wegas-core/pom.xml
+++ b/wegas-core/pom.xml
@@ -17,8 +17,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
-        <!-- Jersey -->
         <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+         </dependency>
+        <!-- Jersey -->
+<!--        <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-json</artifactId>
             <scope>provided</scope>
@@ -27,7 +31,7 @@
             <artifactId>jersey-multipart</artifactId>
             <groupId>com.sun.jersey.contribs</groupId>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
 
         <!-- Apache Shiro Dependencies -->
         <dependency>
@@ -38,7 +42,7 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-web</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
@@ -70,7 +74,7 @@
 
         <dependency>
             <groupId>org.glassfish.main.extras</groupId>
-            <artifactId>glassfish-embedded-all</artifactId>
+            <artifactId>glassfish-embedded-web</artifactId>
             <scope>provided</scope>
         </dependency>
 
@@ -112,7 +116,7 @@
             <groupId>com.madgag</groupId>
             <artifactId>util-diff</artifactId>
         </dependency>
-        
+
 
     </dependencies>
 
